# gitnudge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/gitnudge/: __init__.py  __main__.py  ai.py  cli.py  config.py  core.py  git.py  logging_utils.py
tests/: __init__.py  test_gitnudge.py
