[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitnudge"
version = "0.1.0"
description = "AI-Powered Git Rebase Assistant using Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "GitNudge Contributors" }
]
keywords = ["git", "rebase", "ai", "claude", "anthropic", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
gitnudge = "gitnudge.cli:main"

[project.urls]
Homepage = "https://github.com/GitNudge/gitnudge"
Documentation = "https://github.com/GitNudge/gitnudge#readme"
Repository = "https://github.com/GitNudge/gitnudge"
Issues = "https://github.com/GitNudge/gitnudge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gitnudge"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=gitnudge"
